bin/testsuite/tests/compiler/src/errors/compiler4052.swg
#global testerror "Err0158"
#test
{
    (x, y) = {}
}
